--- a/estilos/style.css
+++ b/estilos/style.css
@@ -51,3 +51,8 @@ section#login > div#formulario{
     display: block;
     padding: 10px;
 }
+
+section#login > div#formulario > h1{
+    text-align: center;
+    font-size: 1.8em;
+}
