--- a/estilos/tablet.css
+++ b/estilos/tablet.css
@@ -19,3 +19,7 @@ section#login > div#formulario{
     float: right;
     width: 70%;
 }
+
+section#login > div#formulario > p{
+    font-size: 1em;
+}
