--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
 
     background-color: white;
     width: 300px;
@@ -36,6 +35,7 @@ section#login{
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.445);
 
+    transform: translate(-50%, -50%);
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -68,9 +68,93 @@ section#login > div#formulario > p{
 div#imail{
     background-color: #5f2c82;
     margin-bottom: 5px;
+    border-radius: 10px;
+    height: 40px;
+    color: white;
 }
 
 div#isen{
     background-color: #5f2c82;
     margin-bottom: 5px;
+    border-radius: 10px;
+    height: 40px;
+    color: white;
+}
+
+div#imail > span{
+    font-size: 1.7em;
+    padding: 5px;
+    width: 40px;
+}
+
+div#imail > input{
+    background-color: #72e6e2;
+    color: #000000;
+    height: 35px;
+    width: calc(100% - 45px);
+    font-size: 1em;
+    border-radius: 10px;
+    border: none;
+    transform: translate(0px, -5.5px);
+}
+
+div#imail > input:focus-within{
+    background-color: white;
+}
+
+div#isen > span{
+    font-size: 1.7em;
+    padding: 5px;
+    width: 40px;
+}
+
+div#isen > input{
+    background-color: #72e6e2;
+    color: #000000;
+    height: 35px;
+    width: calc(100% - 45px);
+    font-size: 1em;
+    border-radius: 10px;
+    border: none;
+    transform: translate(0px, -5.5px);
+}
+
+div#isen > input:focus-within{
+    background-color: white;
+}
+    
+
+input.subm{
+    width: 100%;
+    height: 35px;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+input.subm:hover{
+    background-color: #337270;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    border: 2px solid #5dccc8;
+    border-radius: 10px;
+    color: #2e6664;
+    width: 100%;
+    height: 35px;
+    margin-top: 5px;
+}
+
+form > a.botao:hover{
+    background-color: #62c4c0;
+}
+
+form > a.botao > span{
+    padding-top: 5px;
+    font-size: 1.1em;
 }
